--- a/client/src/lang/en.json
+++ b/client/src/lang/en.json
@@ -6,8 +6,8 @@
     "username": "Username",
     "password": "Password",
     "login": "Login",
-    "or_login_with_pi_browser": "Or Login with Pi Browser",
-    "auth_with_pi_browser": "Auth with Pi Browser",
+    "or_login_with_pi_browser": "Login with Pi Browser",
+    "auth_with_pi_browser": "Login with Pi Browser",
     "forgot_password": "Forgot Password?",
     "do_not_have_piora_account": "Don't have Piora Account?",
     "sign_up_now": "Sign up now",
@@ -20,7 +20,7 @@
     "min": "min",
     "read": "read",
     "content_allowed": "Content Allowed",
-    "policy": "Policy",
+    "policy": "POLICY",
     "you_love_piora_and_want_to_help_us": "You love Piora and want to help us?",
     "donate": "Donate",
     "MAY_BE_GOOD_FOR_YOU": "MAY BE GOOD FOR YOU",
@@ -48,13 +48,14 @@
     "edit": "Edit",
     "delete": "Delete",
     "views": "views",
+    "view": "views",
     "comment_this_post": "Comment this post",
     "send": "Send",
     "hot": "Hot",
     "new": "New",
     "do_you_want_to_delete_post": "Do you want to delete post?",
     "cancel": "Cancel",
-    "invite_code": "Invite code",
+    "invite_code": "Invite code (Optional)",
     "register": "Register",
     "chat": "Chat",
     "follows": "Follows",
@@ -81,5 +82,20 @@
     "notPiBrowser": "You are not in Pi Browser!",
     "dontmiss":  "DON'T MISS",
     "foryou": "FOR YOU",
-    "maybeyoulike": "MAYBE YOU LIKE"
+    "maybeyoulike": "MAYBE YOU LIKE",
+    "link": "LINK",
+    "nothinghere": "Nothing here",
+    "resultsearch": "Result for:",
+    "users": "Users",
+    "choosechat": "Choose a user to start",
+    "choosetopic": "Please choose a topic",
+    "wewwillmakeitease": "We will make it easy for you to access the posts",
+    "searchbyname": "Search by name...",
+    "success": "Success!",
+    "loading": "Processing withdraw, please wait",
+    "commentthispost": "Comment this post",
+    "reply": "Reply ",
+    "replythiscomment": "Reply this comment",
+    "note1": "Your username will also be used as an invitation code, invite your friends to get 0.1% commission from rewards of referral.",
+    "note2": "Username of the person who invited you to Piora"
 }
