--- a/client/src/lang/vi.json
+++ b/client/src/lang/vi.json
@@ -6,8 +6,8 @@
     "username": "Tên người dùng",
     "password": "Mật khẩu",
     "login": "Đăng nhập",
-    "or_login_with_pi_browser": "Hoặc đăng nhập với Pi Browser",
-    "auth_with_pi_browser": "Xác thực với Pi Browser",
+    "or_login_with_pi_browser": "Đăng nhập với Pi Browser",
+    "auth_with_pi_browser": "Đăng nhập bằng Pi Browser",
     "forgot_password": "Quên mật khẩu?",
     "do_not_have_piora_account": "Chưa có tài khoản Piora?",
     "sign_up_now": "Đăng ký ngay",
@@ -20,7 +20,7 @@
     "min": "phút",
     "read": "đọc",
     "content_allowed": "Nội quy",
-    "policy": "Pháp lý",
+    "policy": "PHÁP LÝ",
     "you_love_piora_and_want_to_help_us": "Bạn yêu mến Piora và muốn ủng hộ chúng mình?",
     "donate": "Ủng hộ",
     "MAY_BE_GOOD_FOR_YOU": "DÀNH CHO BẠN",
@@ -48,13 +48,14 @@
     "edit": "Sửa",
     "delete": "Xóa",
     "views": "Lượt xem",
+    "view": "lượt xem",
     "comment_this_post": "Bình luận bài viết này",
     "send": "Gửi",
     "hot": "Hot",
     "new": "Mới",
     "do_you_want_to_delete_post": "Xóa bài viết?",
     "cancel": "Hủy",
-    "invite_code": "Bạn được mời bởi",
+    "invite_code": "Bạn được mời bởi ai? (Không bắt buộc)",
     "register": "Đăng ký",
     "chat": "Chat",
     "follows": "Lượt theo dõi",
@@ -81,5 +82,20 @@
     "notPiBrowser": "Hãy sử dụng Pi Browser để truy cập!",
     "dontmiss":  "ĐỪNG BỎ LỠ",
     "foryou": "DÀNH CHO BẠN",
-    "maybeyoulike": "CÓ THỂ BẠN QUAN TÂM"
+    "maybeyoulike": "CÓ THỂ BẠN QUAN TÂM",
+    "link": "LIÊN KẾT",
+    "nothinghere": "Không có thông báo",
+    "resultsearch": "Kết quả tìm kiếm cho:",
+    "users": "Người dùng",
+    "choosechat": "Chọn một người dùng để bắt đầu",
+    "choosetopic": "Hãy chọn những chủ đề bạn quan tâm",
+    "wewwillmakeitease": "Piora sẽ giúp bạn dễ dàng tiếp cận các bài viết",
+    "searchbyname": "Tìm kiếm theo tên",
+    "success": "Thành công!",
+    "loading": "Đang xử lý giao dịch, vui lòng chờ giây lát",
+    "commentthispost": "Bình luận bài viết này",
+    "reply": "Trả lời ",
+    "replythiscomment": "Trả lời bình luận này",
+    "note1": "Hãy sử dụng tên người dùng như mã mời bạn bè và nhận thưởng nhé!",
+    "note2": "Người giới thiệu của bạn sẽ được bonus 0.1% những gì bạn nhận được."
 }
